--- a/app/src/main/res/layout/activity_courses_list.xml
+++ b/app/src/main/res/layout/activity_courses_list.xml
@@ -7,6 +7,6 @@
     android:id="@+id/recycler_view"
     android:padding="16sp"
     android:background="@drawable/darkocean"
-    tools:context=".CoursesListActivity">
+    tools:context=".activities.CoursesListActivity">
 
 </android.support.v7.widget.RecyclerView>
